@@ -12,6 +12,7 @@ For more details, please see the README file.
 
 , 2019: AnnotSV version 
 	- Include the lift-over GRCh38 gnomAD SV frequency annotation
+	- New "AnnotSV ID" settings (to ensure to only have unique identifiers)
 	- Add bugfix concerning the "-candidateGenesFiltering" option
 
 July 30, 2019: AnnotSV version 2.2.3
